fix overflow on firefox #37

--- a/web/public/css/log.css
+++ b/web/public/css/log.css
@@ -186,3 +186,7 @@
     color: #f0f0f0;
     cursor: default;
 }
+
+.entry {
+    overflow-wrap: anywhere;
+}
